--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="/style.e308ff8e.css">
+	<link rel="stylesheet" href="./style.e308ff8e.css">
 	<title></title>
-<script src="/style.e308ff8e.js"></script></head>
+<script src="./style.e308ff8e.js"></script></head>
 <body>
     
 
@@ -17,6 +17,6 @@
             <!-- IMAGES GO HERE-->
         </div>
     </div>
-    <script src="/controller.e87f5190.js"></script>
+    <script src="./controller.e87f5190.js"></script>
 </body>
 </html>
